# Groot-EuroSys25

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  groot.cu
groot/: CMakeLists.txt  groot.h
groot/core/: macros.h  memory.h  types.h
groot/formats/: coo.h  csr.h
groot/transforms/: knn.h  reorder.h
groot/utils/: csr_helpers.h  functors.h  option.h  timer.h
groot/utils/io/: read.h  write.h
